# 1c_parse

./: .gitignore  .pre-commit-config.yaml  PROJECT_CONTEXT.md  README.md  pyproject.toml
src/: __main__.py  config.py  normalization.py  parser_1c.py  processing.py  reporting.py  utils.py
templates/: report_annual_template.html  report_comparison_template.html
